# mediapart-daily-pdf-mail

./: README.md  pyproject.toml
.github/workflows/: download-and-mail.yml  download-pdf-and-upload-to-remarkable.yml
m2m/: run.py
scripts/: get_device_token.py
