[tool.poetry]
name = "mediapart-daily-pdf-mail"
version = "0.1.0"
description = "Fetches a PDF of the newspaper Mediapart and mails it"
authors = ["Adrien Di Pasquale <adrien@dipasquale.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
